--- a/scss/main.scss
+++ b/scss/main.scss
@@ -44,6 +44,7 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
 @import './components/calendarItem.scss'; 
 @import './components/headerDescr.scss'; 
 @import './components/orderInfo.scss'; 
+@import './filters/workFilters.scss'; 
 @import './forms/contactForm.scss'; 
 @import './menus/topNav.scss'; 
 // @import './post_types/customPostType.scss'; 
