Update icons font Condition for form button at past events Condition for thumbnail at posts detail gallery Cronology order fix at events list

--- a/scss/croxoicons/variables.scss
+++ b/scss/croxoicons/variables.scss
@@ -4,3 +4,5 @@ $icomoon-font-path: "fonts" !default;
 $croxo-iconsfavicon: "\e900";
 $croxo-iconstitulo_site_1: "\e901";
 $croxo-iconstitulo_site_2: "\e902";
+$croxo-iconslava_logo-01: "\e903";
+
