--- a/scss/croxoicons/style.css
+++ b/scss/croxoicons/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'croxoicons';
-  src:  url('fonts/croxoicons.eot?pidhsb');
-  src:  url('fonts/croxoicons.eot?pidhsb#iefix') format('embedded-opentype'),
-    url('fonts/croxoicons.ttf?pidhsb') format('truetype'),
-    url('fonts/croxoicons.woff?pidhsb') format('woff'),
-    url('fonts/croxoicons.svg?pidhsb#croxoicons') format('svg');
+  src:  url('fonts/croxoicons.eot?jwgn6w');
+  src:  url('fonts/croxoicons.eot?jwgn6w#iefix') format('embedded-opentype'),
+    url('fonts/croxoicons.ttf?jwgn6w') format('truetype'),
+    url('fonts/croxoicons.woff?jwgn6w') format('woff'),
+    url('fonts/croxoicons.svg?jwgn6w#croxoicons') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -33,4 +33,7 @@
 }
 .croxo-iconstitulo_site_2:before {
   content: "\e902";
+}
+.croxo-iconslava_logo-01:before {
+  content: "\e903";
 }
