--- a/scss/croxoicons/style.scss
+++ b/scss/croxoicons/style.scss
@@ -2,11 +2,11 @@
 
 @font-face {
   font-family: '#{$icomoon-font-family}';
-  src:  url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot');
-  src:  url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot') format('embedded-opentype'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.ttf') format('truetype'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff') format('woff'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.svg?pidhsb##{$icomoon-font-family}') format('svg');
+  src:  url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?jwgn6w');
+  src:  url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?jwgn6w#iefix') format('embedded-opentype'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.ttf?jwgn6w') format('truetype'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff?jwgn6w') format('woff'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.svg?jwgn6w##{$icomoon-font-family}') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -18,7 +18,6 @@
   speak: never;
   font-style: normal;
   font-weight: normal;
-
   font-variant: normal;
   text-transform: none;
   line-height: 1;
@@ -41,6 +40,11 @@
 .croxo-iconstitulo_site_2 {
   &:before {
     content: $croxo-iconstitulo_site_2; 
+  }
+}
+.croxo-iconslava_logo-01 {
+  &:before {
+    content: $croxo-iconslava_logo-01; 
   }
 }
 
