Finnish galinhairo layout

--- a/scss/croxoicons/style.css
+++ b/scss/croxoicons/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'croxoicons';
-  src:  url('fonts/croxoicons.eot?jwgn6w');
-  src:  url('fonts/croxoicons.eot?jwgn6w#iefix') format('embedded-opentype'),
-    url('fonts/croxoicons.ttf?jwgn6w') format('truetype'),
-    url('fonts/croxoicons.woff?jwgn6w') format('woff'),
-    url('fonts/croxoicons.svg?jwgn6w#croxoicons') format('svg');
+  src:  url('fonts/croxoicons.eot?uyl465');
+  src:  url('fonts/croxoicons.eot?uyl465#iefix') format('embedded-opentype'),
+    url('fonts/croxoicons.ttf?uyl465') format('truetype'),
+    url('fonts/croxoicons.woff?uyl465') format('woff'),
+    url('fonts/croxoicons.svg?uyl465#croxoicons') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -36,4 +36,7 @@
 }
 .croxo-iconslava_logo-01:before {
   content: "\e903";
+}
+.croxo-iconslava_logo-01-mirror:before {
+  content: "\e904";
 }
