--- a/scss/croxoicons/variables.scss
+++ b/scss/croxoicons/variables.scss
@@ -5,4 +5,5 @@ $croxo-iconsfavicon: "\e900";
 $croxo-iconstitulo_site_1: "\e901";
 $croxo-iconstitulo_site_2: "\e902";
 $croxo-iconslava_logo-01: "\e903";
+$croxo-iconslava_logo-01-mirror: "\e904";
 
