--- a/scss/global/variables.scss
+++ b/scss/global/variables.scss
@@ -1,5 +1,11 @@
+//colors
+$croxo-color-text: #212529;
+
+//text
 $font-size-h1: 54px;
 $font-size-h1-xl: 72px;
 $font-size-h1-xxl: 84px;
 $font-size-label: 14px;
-$croxo-color-text: #212529;
+$font-size-text: 16px;
+$font-size-giant-sm: 160px;
+$font-size-giant: 222px;
