--- a/scss/main.scss
+++ b/scss/main.scss
@@ -40,6 +40,7 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
 @import 'header';
 @import 'pages'; 
 @import 'lists'; 
+@import './pages/galinheiro.scss'; 
 @import './components/croxoGallery.scss'; 
 @import './components/calendarItem.scss'; 
 @import './components/headerDescr.scss'; 
