--- a/scss/croxoicons/style.scss
+++ b/scss/croxoicons/style.scss
@@ -2,11 +2,11 @@
 
 @font-face {
   font-family: '#{$icomoon-font-family}';
-  src:  url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?jwgn6w');
-  src:  url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?jwgn6w#iefix') format('embedded-opentype'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.ttf?jwgn6w') format('truetype'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff?jwgn6w') format('woff'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.svg?jwgn6w##{$icomoon-font-family}') format('svg');
+  src:  url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?uyl465');
+  src:  url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?uyl465#iefix') format('embedded-opentype'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.ttf?uyl465') format('truetype'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff?uyl465') format('woff'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.svg?uyl465##{$icomoon-font-family}') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -45,6 +45,11 @@
 .croxo-iconslava_logo-01 {
   &:before {
     content: $croxo-iconslava_logo-01; 
+  }
+}
+.croxo-iconslava_logo-01-mirror {
+  &:before {
+    content: $croxo-iconslava_logo-01-mirror; 
   }
 }
 
