--- a/scss/forms/contactForm.scss
+++ b/scss/forms/contactForm.scss
@@ -1,4 +1,4 @@
-.croxo-contact-form__main-wrapper {
+.croxo-contact-form__main-wrapper, .croxo-event-form__main-wrapper {
     align-items: center;
     background-color: rgba(255, 255, 255, 0.8);
     bottom: 0;
