--- a/scss/croxoicons/variables.scss
+++ b/scss/croxoicons/variables.scss
@@ -1,9 +1,12 @@
 $icomoon-font-family: "croxoicons" !default;
 $icomoon-font-path: "fonts" !default;
 
-$croxo-iconsfavicon: "\e900";
-$croxo-iconstitulo_site_1: "\e901";
-$croxo-iconstitulo_site_2: "\e902";
-$croxo-iconslava_logo-01: "\e903";
-$croxo-iconslava_logo-01-mirror: "\e904";
+$croxo-iconsfavicon: \e900;
+$croxo-iconstitulo_site_1: \e901;
+$croxo-iconstitulo_site_2: \e902;
+$croxo-iconslava_logo-01: \e903;
+$croxo-iconslava_logo-01-mirror: \e904;
+$croxo-iconsheart1: \e906;
+$croxo-iconsheart2: \e905;
+$croxo-iconsinstagram: \e907;
 
