--- a/scss/global/variables.scss
+++ b/scss/global/variables.scss
@@ -5,6 +5,7 @@ $croxo-color-text: #212529;
 $font-size-h1: 54px;
 $font-size-h1-xl: 72px;
 $font-size-h1-xxl: 84px;
+$font-size-label-sm: 12px;
 $font-size-label: 14px;
 $font-size-text: 16px;
 $font-size-giant-sm: 160px;
