--- a/scss/croxoicons/style.css
+++ b/scss/croxoicons/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'croxoicons';
-  src:  url('fonts/croxoicons.eot?uyl465');
-  src:  url('fonts/croxoicons.eot?uyl465#iefix') format('embedded-opentype'),
-    url('fonts/croxoicons.ttf?uyl465') format('truetype'),
-    url('fonts/croxoicons.woff?uyl465') format('woff'),
-    url('fonts/croxoicons.svg?uyl465#croxoicons') format('svg');
+  src:  url('fonts/croxoicons.eot?ikkjkv');
+  src:  url('fonts/croxoicons.eot?ikkjkv#iefix') format('embedded-opentype'),
+    url('fonts/croxoicons.ttf?ikkjkv') format('truetype'),
+    url('fonts/croxoicons.woff?ikkjkv') format('woff'),
+    url('fonts/croxoicons.svg?ikkjkv#croxoicons') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -39,4 +39,13 @@
 }
 .croxo-iconslava_logo-01-mirror:before {
   content: "\e904";
+}
+.croxo-iconsheart1:before {
+  content: "\e906";
+}
+.croxo-iconsheart2:before {
+  content: "\e905";
+}
+.croxo-iconsinstagram:before {
+  content: "\e907";
 }
