--- a/scss/global/globalStyles.scss
+++ b/scss/global/globalStyles.scss
@@ -99,6 +99,10 @@
 	border: 2px solid var(--acid-color);
 }
 
+.border-top-theme-color {
+	border-top: 2px solid var(--acid-color);
+}
+
 .border-theme-color--important {
 	border: 2px solid var(--acid-color) !important;
 }
@@ -308,6 +312,14 @@
 		'opsz' 24
 }
 
+.material-symbols-light {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 300,
+  'GRAD' 0,
+  'opsz' 24
+}
+
 //pointer events
 .p-events-none {
 	pointer-events: none;
@@ -390,6 +402,7 @@
 }
 
 .reset-link {
+	color: inherit;
 	text-decoration: none;
 
 	&:hover {
@@ -397,6 +410,10 @@
 
 		--bs-link-color-rgb: none !important;
 	}
+}
+
+.reset-margin {
+	margin: 0;
 }
 
 //text formatting
@@ -441,6 +458,10 @@
 
 .croxo-text-label {
 	font-size: $font-size-label;
+}
+
+.croxo-text-label-sm {
+	font-size: $font-size-label-sm;
 }
 
 .croxo-icon-size-micro {
