--- a/style.css
+++ b/style.css
@@ -29422,6 +29422,10 @@ progress {
   border: 2px solid var(--acid-color);
 }
 
+.border-top-theme-color {
+  border-top: 2px solid var(--acid-color);
+}
+
 .border-theme-color--important {
   border: 2px solid var(--acid-color) !important;
 }
@@ -29747,6 +29751,10 @@ progress {
   font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
 }
 
+.material-symbols-light {
+  font-variation-settings: "FILL" 0, "wght" 300, "GRAD" 0, "opsz" 24;
+}
+
 .p-events-none {
   pointer-events: none;
 }
@@ -29890,11 +29898,16 @@ progress {
 }
 
 .reset-link {
+  color: inherit;
   text-decoration: none;
 }
 .reset-link:hover {
   text-decoration: none;
   --bs-link-color-rgb: none !important;
+}
+
+.reset-margin {
+  margin: 0;
 }
 
 .croxo-font-text {
@@ -29934,6 +29947,10 @@ progress {
 
 .croxo-text-label {
   font-size: 14px;
+}
+
+.croxo-text-label-sm {
+  font-size: 12px;
 }
 
 .croxo-icon-size-micro {
@@ -30021,8 +30038,8 @@ progress {
 
 @font-face {
   font-family: "croxoicons";
-  src: url("fonts/croxoicons.eot?uyl465");
-  src: url("fonts/croxoicons.eot?uyl465#iefix") format("embedded-opentype"), url("fonts/croxoicons.ttf?uyl465") format("truetype"), url("fonts/croxoicons.woff?uyl465") format("woff"), url("fonts/croxoicons.svg?uyl465#croxoicons") format("svg");
+  src: url("fonts/croxoicons.eot?ikkjkv");
+  src: url("fonts/croxoicons.eot?ikkjkv#iefix") format("embedded-opentype"), url("fonts/croxoicons.ttf?ikkjkv") format("truetype"), url("fonts/croxoicons.woff?ikkjkv") format("woff"), url("fonts/croxoicons.svg?ikkjkv#croxoicons") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -30059,6 +30076,18 @@ progress {
 
 .croxo-iconslava_logo-01-mirror:before {
   content: "\e904";
+}
+
+.croxo-iconsheart1:before {
+  content: "\e906";
+}
+
+.croxo-iconsheart2:before {
+  content: "\e905";
+}
+
+.croxo-iconsinstagram:before {
+  content: "\e907";
 }
 
 .site-header .site-title a {
@@ -30261,6 +30290,13 @@ progress {
 }
 .croxo-events-list-item .disco_title__text-container .disco_title__actions-container .disco_title__actions-container__apply-link .disco_title__actions-container__apply-link__span {
   font-size: 18px;
+}
+
+.croxo-footer .footer-inner {
+  max-width: unset;
+}
+.croxo-footer .footer-inner .copyright {
+  max-width: unset !important;
 }
 
 .croxo-galinheiro--main-wrapper .croxo-galinheiro--main-wrapper__header .header__logo img {
